# WRFDA

./: BR_hans_info  Config_new.pl  Makefile  ModulesOutline.txt  OutlineModules.csh  README  README.txt  README_wrf4Dvar_esmf  TestAll.csh  beta.html  clean  clean_new  clean_old  coding.html  compile  compile_new  compile_old  compile_wrf  compile_wrfvar  configure  configure.wrf.backup  configure_new  configure_old  configure_wrf  contact.html  downloads.html  eric  esmf_outerloop_coupler.F90  esmf_solver_component.F90  esmf_var_nl_coupler.F90  esmf_wrf4Dvar_driver.F90  esmf_wrfnl_component.F90  esmf_wrfplus_component.F90  esmf_wrfvar_component.F90  faq.html  findUnusedNLEntries.csh  how_to_compile.html  how_to_compile_V3_1.html  index.html  index.html.orig  (+67 more)
Connections/: feedback_db.php
Docs/: README.CHECK  README2.2  README2.2_bluevista  README2.2tutorial  gen_be.htm  gen_be_structure_v0-2.html  images  older_usersguides.html  readBufr.htm  wrfvar_cvoptions3.html
OnlineTutorial/: index.html  menu.html
Registry/: Registry.3DVAR  Registry.EM  Registry.EM.NO_OPT  Registry.EM.PET  Registry.EM.WRF  Registry.EM.save  Registry.EM_4DVAR  Registry.EM_4DVAR.save  Registry.EM_CHEM  Registry.EM_NL  Registry.EM_SST  Registry.NMM  Registry.backup  Registry.gen_be  Registry.wrfvar  Registry_3dvar  Registry_kma
Reports/: 4DVARLBC.tex  4DVAR_Doc.tex
Templates/: index_korea.dwt  temp1.dwt  temp2.dwt  temp_korea2010.dwt  temp_korea2011.dwt  temp_wrfda.dwt
afwa_2.2_operational/: compile  setup.ksh
arch/: Config.pl  Config_3dvar.pl  Config_new.pl  Config_old.pl  Config_wrf.pl  Config_wrfvar.pl  configure.defaults  configure.defaults_3dvar  configure.defaults_new  configure.defaults_wrf  configure.defaults_wrfvar  configure_new.defaults  postamble  postamble_3dvar  postamble_3dvar.cray1e  postamble_3dvar.crayx1  postamble_3dvar.mac_g4  postamble_new  postamble_wrfvar  postamble_wrfvar.cray1e  postamble_wrfvar.crayx1  postamble_wrfvar.mac_g4  preamble  preamble_3dvar  preamble_new  preamble_old  preamble_wrfvar
arch_old/: Config.pl  configure.defaults  preamble
arch_wrf/: Config.pl  configure.defaults  preamble
bufr_reblock/: reblock.c
changes/: change_20040621.wh  change_20041122.db  change_20050923.yrg
chem/: Makefile  Makefile_old  module_aerosols_sorgam.F  module_bioemi_beis311.F  module_fastj_mie.F  module_input_chem_data.F  module_mosaic_csuesat.F  module_mosaic_therm.F  module_phot_fastj.F  module_phot_mad.F
code_viewer/: index.html
convertor/: Makefile  convertor.make  module_kma2netcdf_interface.F  module_kma2netcdf_interface.f90  module_mm5_wrf_interface.F  module_mm5_wrf_interface.f90  module_netcdf2kma_interface.F  module_wrf_mm5_interface.F  module_wrf_mm5_interface.f90
da/: Makefile  da.make
da_3dvar/: Makefile  da.make  da_3dvar.make  module_da_gen_be_stats_interface.F  module_gen_be_esmf_super.F  module_gen_be_top.F  module_wrf_3dvar_interface.F  module_wrf_3dvar_io.F  module_wrfvar_esmf_super.F  module_wrfvar_top.F
da_be/: Makefile
dependence_analysis/: a_calc_p_rho_phi_anal.F  a_diagnose_w_anal.F  a_rk_scalar_tend_anal.F  a_rk_step_prep_anal.F  a_rk_tendency1_anal.F  a_rk_tendency2_anal.F  a_rk_update_scalar_anal.F  a_surface_drag_anal.F  calculate_km_kh_anal.F  end_of_solve_em_ad_anal.F  rk_step_prep_anal.F  rk_tendency_anal.F  solve_em_ad_anal.F
doc/: generate_html.pl  list_refs.ksh  update_html.ksh
download/: beta-regist.php  beta-return.php  beta.html  free_data.html  fso.html  get_source.html  madis-return.php  madis.html  testdata.html  tools.html  wrf-regist.php  wrf-regist2.php  wrf-return.php  wrf-return2.php  wrfda.html  wrfda_nomap.html  wrfnl.html  wrfplus.html
dyn_em/: Makefile  addroutines.F  couple_or_uncouple_em.F  dyn_em.make  interp_domain_em.F  module_4dvaropt.F  module_advect_em.F  module_advect_em_ad.F  module_advect_em_sn.F  module_advect_em_tl.F  module_bc_ad.F  module_bc_em.F  module_bc_em_ad.F  module_bc_em_sn.F  module_bc_em_tl.F  module_bc_tl.F  module_big_step_utilities_em.F  module_big_step_utilities_em_ad.F  module_big_step_utilities_em_sn.F  module_big_step_utilities_em_tl.F  module_check.F  module_diffusion_em.F  module_diffusion_em_ad.F  module_diffusion_em_sn.F  module_diffusion_em_tl.F  module_em.F  module_em_ad.F  module_em_sn.F  module_em_tl.F  module_initialize_real.F  module_initialize_squall2d_y.F  module_linked_lisk.F  module_small_step_em.F  module_small_step_em_ad.F  module_small_step_em_sn.F  module_small_step_em_tl.F  nest_init_utils.F  solve_em-merge.F  solve_em.F  solve_em_ad.F  (+5 more)
dyn_exp/: Makefile_old
dyn_nmm/: DSTRB.F  Makefile  NMM_NEST_UTILS1.F  dyn_nmm.make  module_ADVECTION.F  module_BNDRY_COND.F  module_IGWAVE_ADJUST.F  module_NONHY_DYNAM.F  module_initialize_real.F  read_nmm.F  solve_nmm.F  start_domain_nmm.F
dyn_share/: Makefile
fixes/: configure_fix.tar  configure_fix_wrfda.tar
frame/: JRB_Stubs.F  Makefile  adBuffer.F  adStack.c  add_forcing_to_ad.F  collect_on_comm.c  fast_copy.F  frame.make  internal_header_util.F  libmassv.F  md_calls.m4  memory_info.c  microclock.c  module_configure.F  module_dfi.F  module_domain.F  module_domain1.F  module_domain2.F  module_domain3.F  module_driver_constants.F  module_integrate.F  module_integrate_ad.F  module_integrate_tl.F  module_integrate_tst.F  module_integrate_tst_sub.F  module_internal_header_util.F  module_io.F  module_io_quilt.F  module_linked_lisk.F  module_machine.F  module_namelists.F  module_nesting.F  module_quilt_outbuf_ops.F  module_sm.F  module_tiles.F  module_timing.F  (+4 more)
mpich2/1.0.5p4/src/mpid/ch3/channels/ssm/: configure.in
mpich2/1.0.5p4/src/mpid/ch3/channels/ssm/include/: mpidi_ch3_pre.h
mpich2/1.0.5p4/src/mpid/ch3/channels/ssm/src/: .state-cache  Makefile.in  ch3_finalize.c  ch3_istartmsgv.c  ch3_progress_connect.c  ch3_shm_memory.c
mpich2/1.0.5p4/src/mpid/common/locks/: configure  configure.in  mpidu_process_locks_sparc_v9.il  setup
mpich2/1.0.5p4/src/mpid/common/sock/: configure.in  mpidu_sock.h
mpich2/1.0.5p4/src/mpid/common/sock/poll/: sock_immed.i  sock_init.i  sock_post.i  sock_wait.i  socki_util.i
(+11115 files in other folders)
